[metadata]
name = yt-dlp-danmaku
version = 0.1.0
description = yt-dlp plugin for converting Bilibili danmaku into ASS format
author = UlyssesZhan
author_email = ulysseszhan@gmail.com
url = https://github.com/UlyssesZh/yt-dlp-danmaku
license = MIT
keywords = yt-dlp-plugins,danmaku

[options]
packages = find_namespace:
