[metadata]
name = yt-dlp-danmaku
version = 0.2.1
description = yt-dlp plugin for converting Bilibili danmaku into ASS format
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = UlyssesZhan
author_email = ulysseszhan@gmail.com
url = https://github.com/UlyssesZh/yt-dlp-danmaku
license = MIT
keywords =
	yt-dlp-plugins
	danmaku

[options]
install_requires =
	biliass >=2.1.0
	yt-dlp >=2023.01.02
packages = find_namespace:
